@@ -56,6 +56,7 @@
     "inherits": "2.0.1",
     "load-script": "1.0.0",
     "semver": "4.3.2",
+    "tunnel-agent": "0.4.0",
     "util-deprecate": "1.0.1"
   },
   "devDependencies": {
