@@ -3,6 +3,8 @@ CHANGELOG
 UNRELEASED
     * BREAKING CHANGE: Parse build now uses V3 implementation
     * FEATURE: Parse build now returns parse promises. https://parse.com/docs/js_guide#promises
+    * FEATURE: Automatically handle HTTP_PROXY HTTPS_PROXY environment variables
+    in Node.js client
 
 2015-10-04  3.1.0
     * CHANGE: Node.js will now use http headers instead of inlining them into the api call as browsers are doing
